runtime checks for nulls in tags